--- a/shop.html
+++ b/shop.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SportX - Home</title>
+
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#0f172a">
+
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
+        /* আপনার সব CSS স্টাইল এখানে আগের মতোই আছে... */
         :root {
             --primary: #00d2ff;
             --secondary: #3a7bd5;
@@ -138,6 +143,16 @@
     <div class="product-grid" id="p-list"></div>
 </div>
 
+<script>
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', () => {
+      navigator.serviceWorker.register('sw.js')
+        .then(reg => console.log('Service Worker Registered'))
+        .catch(err => console.log('Service Worker Failed', err));
+    });
+  }
+</script>
+
 <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
     import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
@@ -158,7 +173,6 @@
 
     let pArray = [];
 
-    // ১. আল্ট্রা-ফাস্ট লোডিং: ক্যাশ থেকে ডাটা আগে লোড করা
     const cachedData = localStorage.getItem('ms_products_cache');
     if(cachedData) {
         pArray = JSON.parse(cachedData);
@@ -180,7 +194,6 @@
         'Fashion': ["Men's Fashion", "Women's Fashion", "Shoes"]
     };
 
-    // ২. ডাটাবেস থেকে ডাটা আনা এবং ক্যাশ আপডেট করা
     onValue(ref(db, 'products'), (snap) => {
         const newArray = [];
         if(snap.exists()){
@@ -229,7 +242,6 @@
         const list = subCats[mainCat];
         subMenu.innerHTML = `<div class="sub-cat-btn active" onclick="filterByMainCat('${mainCat}', this)">সব ${mainCat}</div>`;
         list.forEach(sub => {
-            // নামটিকে নিরাপদ করার জন্য Single Quote হ্যান্ডেল করা হয়েছে
             const safeSub = sub.replace(/'/g, "\\'"); 
             subMenu.innerHTML += `<div class="sub-cat-btn" onclick="filterBySubCat('${safeSub}', this)">${sub}</div>`;
         });
@@ -278,4 +290,5 @@
     };
 </script>
 </body>
-</html>
+    </html>
+        
