--- a/shop.html
+++ b/shop.html
@@ -69,6 +69,9 @@
         }
         .id-box:active { background: rgba(0, 210, 255, 0.2); }
 
+        .user-label { font-size:11px; color:#94a3b8; margin-top: 5px; }
+        .user-data { background:rgba(0,0,0,0.2); padding:8px; border-radius:8px; margin-bottom:10px; font-size: 13px; }
+
         .cat-grid { display: grid; grid-template-columns: repeat(4, 1fr); gap: 10px; padding: 15px; margin-top: 10px; }
         .cat-item { background: var(--glass); border: 1px solid var(--border); border-radius: 15px; padding: 12px 5px; text-align: center; cursor: pointer; transition: 0.3s; }
         .cat-item i { font-size: 20px; color: var(--primary); margin-bottom: 5px; display: block; }
@@ -111,12 +114,15 @@
 <div class="profile-menu" id="profileMenu">
     <h3 style="margin:0 0 15px 0; font-size: 18px; color:var(--primary); text-align: center;">My Profile</h3>
     <div class="id-box" onclick="copyMyID()">
-        <div id="u-id" style="font-size: 18px; font-weight: bold;">#------</div>
+        <div style="font-size:10px; color:#94a3b8; text-transform: uppercase;">User Profile ID (ক্লিক করুন)</div>
+        <div id="u-id" style="font-size: 18px; font-weight: bold; color: white; letter-spacing: 2px; margin-top: 3px;">#------</div>
     </div>
-    <div id="u-name">...</div>
-    <div id="u-email">...</div>
-    <button onclick="location.href='my_orders.html'">My Orders</button>
-    <button onclick="logout()">logout</button>
+    <div class="user-label">নাম:</div>
+    <div class="user-data" id="u-name">...</div>
+    <div class="user-label">EMAIL:</div>
+    <div class="user-data" id="u-email">...</div>
+    <button style="width:100%; margin-top:20px; padding:12px; background:var(--primary); border:none; border-radius:12px; font-weight:bold; cursor:pointer;" onclick="location.href='my_orders.html'">My Orders</button>
+    <button style="width:100%; margin-top:10px; padding:10px; background:#e74c3c; border:none; border-radius:12px; color:white; cursor:pointer;" onclick="logout()">logout</button>
 </div>
 
 <div class="cat-grid">
@@ -135,17 +141,12 @@
 <script>
   if ('serviceWorker' in navigator) {
     window.addEventListener('load', () => {
-      // GitHub Pages-এর সাব-ডাইরেক্টরির জন্য './' ব্যবহার করা হয়েছে
-      navigator.serviceWorker.register('./sw.js')
-        .then(reg => console.log('Service Worker Registered'))
-        .catch(err => console.log('Service Worker Failed', err));
+      navigator.serviceWorker.register('./sw.js').then(reg => console.log('SW Registered'));
     });
   }
 </script>
 
 <script type="module">
-    // আপনার Firebase এবং অন্যান্য মেইন জাভাস্ক্রিপ্ট কোড এখানে থাকবে...
-    // (আমি আপনার আগের সব লজিক ঠিক রেখেছি)
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
     import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
     import { getDatabase, ref, onValue } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js";
@@ -169,27 +170,23 @@
         if (user) {
             document.getElementById('u-name').innerText = user.displayName || "User";
             document.getElementById('u-email').innerText = user.email;
-            const shortID = user.uid.slice(-6).toUpperCase();
-            document.getElementById('u-id').innerText = "#" + shortID;
+            document.getElementById('u-id').innerText = "#" + user.uid.slice(-6).toUpperCase();
         } else { location.href = "index.html"; }
     });
 
     onValue(ref(db, 'products'), (snap) => {
         const newArray = [];
         if(snap.exists()){
-            snap.forEach(c => {
-                let d = c.val(); d.id = c.key;
-                newArray.push(d);
-            });
+            snap.forEach(c => { let d = c.val(); d.id = c.key; newArray.push(d); });
             pArray = newArray;
             render(pArray);
         }
     });
 
     function render(data) {
-        const list = document.getElementById('p-list');
-        list.innerHTML = data.map(p => `
+        document.getElementById('p-list').innerHTML = data.map(p => `
             <div class="p-card" onclick="location.href='product_details.html?id=${p.id}'">
+                ${p.stock <= 0 ? '<div class="sold-badge">Sold Out</div>' : ''}
                 <img src="${p.img}" loading="lazy">
                 <div class="p-info">
                     <div class="p-name">${p.name}</div>
@@ -198,8 +195,54 @@
             </div>`).join('');
     }
 
-    // ... Other functions (search, logout, filter) ...
+    const subCats = {
+        'Sports': ['Jersey', 'Boots', 'Sports Equipment'],
+        'Electronics': ['Mobile Accessories', 'Gadgets', 'Headphones'],
+        'Fashion': ["Men's Fashion", "Women's Fashion", "Shoes"]
+    };
+
+    window.selectMainCat = (mainCat, el) => {
+        document.querySelectorAll('.cat-item').forEach(i => i.classList.remove('active'));
+        el.classList.add('active');
+        const subMenu = document.getElementById('subCatMenu');
+        if (mainCat === 'All') { subMenu.style.display = 'none'; render(pArray); } 
+        else { subMenu.style.display = 'flex'; generateSubMenu(mainCat); filterByMainCat(mainCat); }
+    };
+
+    function generateSubMenu(mainCat) {
+        const subMenu = document.getElementById('subCatMenu');
+        let html = `<div class="sub-cat-btn active" onclick="filterByMainCat('${mainCat}', this)">সব ${mainCat}</div>`;
+        subCats[mainCat].forEach(sub => {
+            html += `<div class="sub-cat-btn" onclick="filterBySubCat('${sub.replace(/'/g, "\\'")}', this)">${sub}</div>`;
+        });
+        subMenu.innerHTML = html;
+    }
+
+    window.filterByMainCat = (m, el) => {
+        if(el) updateSubBtnStyle(el);
+        const f = pArray.filter(p => subCats[m].includes(p.category) || p.category === m);
+        render(f);
+    };
+
+    window.filterBySubCat = (s, el) => { updateSubBtnStyle(el); render(pArray.filter(p => p.category === s)); };
+
+    function updateSubBtnStyle(el) { document.querySelectorAll('.sub-cat-btn').forEach(b => b.classList.remove('active')); el.classList.add('active'); }
+
+    window.searchFn = () => {
+        let v = document.getElementById('searchInput').value.toLowerCase();
+        render(pArray.filter(p => p.name.toLowerCase().includes(v)));
+    };
+
+    const menu = document.getElementById('profileMenu');
+    document.getElementById('profileTrigger').onclick = (e) => { e.stopPropagation(); menu.classList.toggle('show'); };
+    document.onclick = (e) => { if (!menu.contains(e.target)) menu.classList.remove('show'); };
+    
     window.logout = () => signOut(auth).then(() => location.href = "index.html");
+
+    window.copyMyID = () => {
+        const id = document.getElementById('u-id').innerText;
+        navigator.clipboard.writeText(id).then(() => alert("ID কপি হয়েছে: " + id));
+    };
 </script>
 </body>
 </html>
