--- a/order_form.html
+++ b/order_form.html
@@ -275,8 +275,8 @@
         document.getElementById('totalAmount').innerText = finalAmount + " ৳";
     }
 
-    document.getElementById('bkashBtn').onclick = () => setPayment('bKash', '017XXXXXXXX');
-    document.getElementById('nagadBtn').onclick = () => setPayment('Nagad', '018XXXXXXXX');
+    document.getElementById('bkashBtn').onclick = () => setPayment('bKash', '01319474450');
+    document.getElementById('nagadBtn').onclick = () => setPayment('Nagad', '01319474450');
 
     function setPayment(method, num) {
         selectedMethod = method;
