--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MS STORE - Login & Register</title>
+    <title>MS STORE - Premium Login</title>
+    
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    
     <style>
+        :root {
+            --primary: #00d2ff;
+            --secondary: #3a7bd5;
+            --dark: #0f172a;
+            --glass: rgba(255, 255, 255, 0.1);
+        }
+
         * {
             margin: 0;
             padding: 0;
@@ -19,26 +29,28 @@
             align-items: center;
             min-height: 100vh;
             background: radial-gradient(circle at top right, #1e293b, #0f172a);
-            color: #333;
+            color: white;
+            overflow: hidden;
         }
 
         .container {
             position: relative;
             width: 850px;
             height: 550px;
-            background: #fff;
+            background: var(--glass);
+            backdrop-filter: blur(20px);
             border-radius: 30px;
-            box-shadow: 0 0 30px rgba(0, 0, 0, .2);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            box-shadow: 0 25px 50px rgba(0,0,0,0.5);
             overflow: hidden;
         }
 
-        /* ফর্ম বক্স ডিজাইন */
+        /* ফর্ম বক্স ডিজাইন - আপনার প্রিমিয়াম স্টাইল */
         .form-box {
             position: absolute;
             right: 0;
             width: 50%;
             height: 100%;
-            background: #fff;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -52,56 +64,60 @@
             right: 50%;
         }
 
-        .form-box.register {
-            display: none;
-        }
+        .form-box.register { display: none; }
+        .container.active .form-box.register { display: flex; }
 
-        .container.active .form-box.register {
-            display: flex;
-        }
-
-        .form-box h1 {
-            font-size: 30px;
+        h1 {
+            font-size: 2.2rem;
             margin-bottom: 20px;
-            color: #0f172a;
+            background: linear-gradient(white, #cbd5e1);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
         }
 
         input {
             width: 100%;
-            padding: 12px 15px;
-            margin: 8px 0;
-            background: #eee;
-            border: none;
-            border-radius: 10px;
+            padding: 14px;
+            margin: 10px 0;
+            background: rgba(255,255,255,0.05);
+            border: 1px solid rgba(255,255,255,0.1);
+            border-radius: 12px;
+            color: white;
             outline: none;
+            transition: 0.3s;
+        }
+
+        input:focus {
+            border-color: var(--primary);
+            background: rgba(255,255,255,0.1);
         }
 
         .btn {
             width: 100%;
-            padding: 12px;
-            background: #7402dc;
+            padding: 14px;
+            background: linear-gradient(45deg, var(--primary), var(--secondary));
             color: white;
             border: none;
-            border-radius: 10px;
+            border-radius: 12px;
             cursor: pointer;
             font-weight: 600;
             margin-top: 15px;
             transition: 0.3s;
+            text-transform: uppercase;
         }
 
+        .btn:hover { transform: translateY(-3px); box-shadow: 0 10px 20px rgba(0, 210, 255, 0.3); }
+
         .google-btn {
-            background: #fff;
+            background: white;
             color: #444;
-            border: 1px solid #ddd;
             display: flex;
             align-items: center;
             justify-content: center;
             gap: 10px;
         }
 
-        .google-btn img { width: 20px; }
-
-        /* টগল বক্স ডিজাইন */
+        /* টগল বক্স ডিজাইন - স্লাইডিং ইফেক্ট */
         .toggle-box {
             position: absolute;
             width: 100%;
@@ -114,15 +130,13 @@
             left: -250%;
             width: 300%;
             height: 100%;
-            background: linear-gradient(45deg, #00d2ff, #3a7bd5);
+            background: linear-gradient(135deg, var(--secondary), var(--primary));
             border-radius: 150px;
             z-index: 2;
             transition: 1.8s ease-in-out;
         }
 
-        .container.active .toggle-box::before {
-            left: 50%;
-        }
+        .container.active .toggle-box::before { left: 50%; }
 
         .toggle-panel {
             position: absolute;
@@ -136,7 +150,7 @@
             z-index: 2;
             transition: .6s ease-in-out;
             text-align: center;
-            padding: 0 20px;
+            padding: 0 30px;
         }
 
         .toggle-left { left: 0; transition-delay: .6s; }
@@ -148,21 +162,20 @@
         .toggle-panel button {
             background: transparent;
             border: 2px solid #fff;
-            width: 130px;
-            height: 40px;
-            border-radius: 10px;
+            padding: 10px 30px;
+            border-radius: 12px;
             color: #fff;
             cursor: pointer;
-            margin-top: 15px;
+            margin-top: 20px;
             font-weight: 600;
         }
 
-        /* আপনার দেওয়া মোবাইল রেসপন্সিভ কোড (সংশোধিত) */
+        /* আপনার দেওয়া মোবাইলের জন্য হুবহু CSS লজিক */
         @media screen and (max-width: 650px) {
             .container {
-                width: 95%;
-                height: 90vh;
-                border-radius: 20px;
+                width: 100%;
+                height: 100vh;
+                border-radius: 0;
             }
 
             .form-box {
@@ -172,20 +185,20 @@
             }
 
             .container.active .form-box {
-                bottom: 30%;
                 right: 0;
+                bottom: 30%;
             }
 
             .toggle-box::before {
                 left: 0;
                 top: -270%;
+                bottom: -30%;
                 width: 100%;
                 height: 100%;
             }
 
             .container.active .toggle-box::before {
                 top: -70%;
-                left: 0;
             }
 
             .toggle-panel {
@@ -205,10 +218,9 @@
         <div class="form-box login">
             <form id="loginForm">
                 <h1>Login</h1>
-                <input type="email" id="loginEmail" placeholder="ইমেইল">
-                <input type="password" id="loginPass" placeholder="পাসওয়ার্ড">
-                <button type="submit" class="btn">প্রবেশ করুন</button>
-                <div style="margin: 10px 0; color: #777;">অথবা</div>
+                <input type="email" id="loginEmail" placeholder="ইমেইল এড্রেস" required>
+                <input type="password" id="loginPass" placeholder="পাসওয়ার্ড" required>
+                <button type="submit" class="btn">লগইন করুন</button>
                 <button type="button" class="btn google-btn" onclick="googleLogin()">
                     <img src="https://img.icons8.com/color/48/000000/google-logo.png"/> Google
                 </button>
@@ -217,10 +229,10 @@
 
         <div class="form-box register">
             <form id="registerForm">
-                <h1>Create Account</h1>
-                <input type="text" id="regName" placeholder="পূর্ণ নাম">
-                <input type="email" id="regEmail" placeholder="ইমেইল">
-                <input type="password" id="regPass" placeholder="পাসওয়ার্ড">
+                <h1>Sign Up</h1>
+                <input type="text" id="regName" placeholder="আপনার নাম" required>
+                <input type="email" id="regEmail" placeholder="ইমেইল এড্রেস" required>
+                <input type="password" id="regPass" placeholder="পাসওয়ার্ড" required>
                 <button type="submit" class="btn">রেজিস্ট্রেশন</button>
             </form>
         </div>
@@ -228,12 +240,12 @@
         <div class="toggle-box">
             <div class="toggle-panel toggle-left">
                 <h2>Welcome Back!</h2>
-                <p>আপনার অ্যাকাউন্ট থাকলে লগইন করুন</p>
-                <button id="loginBtn">লগইন</button>
+                <p>নতুন কোনো তথ্য পেতে আমাদের সাথে থাকুন।</p>
+                <button id="loginBtn">লগইন করুন</button>
             </div>
             <div class="toggle-panel toggle-right">
-                <h2>Hello, Friend!</h2>
-                <p>নতুন হলে আজই রেজিস্ট্রেশন করুন</p>
+                <h2>Create Account!</h2>
+                <p>আমাদের প্রিমিয়াম স্টোরে স্বাগতম।</p>
                 <button id="registerBtn">রেজিস্ট্রেশন</button>
             </div>
         </div>
@@ -255,22 +267,21 @@
         const auth = getAuth(app);
         const provider = new GoogleAuthProvider();
 
-        // স্লাইডিং এনিমেশন কন্ট্রোল
         const container = document.getElementById('container');
         document.getElementById('registerBtn').onclick = () => container.classList.add('active');
         document.getElementById('loginBtn').onclick = () => container.classList.remove('active');
 
-        // লগইন ফাংশন
+        // লগইন লজিক
         document.getElementById('loginForm').onsubmit = (e) => {
             e.preventDefault();
             const email = document.getElementById('loginEmail').value;
             const pass = document.getElementById('loginPass').value;
-            signInWithEmailAndPassword(auth, email, pass)
-                .then(() => window.location.href = "shop.html")
-                .catch(() => alert("ভুল ইমেইল বা পাসওয়ার্ড"));
+            signInWithEmailAndPassword(auth, email, pass).then(() => {
+                window.location.href = "shop.html";
+            }).catch(e => alert("ভুল তথ্য"));
         };
 
-        // রেজিস্ট্রেশন ফাংশন
+        // রেজিস্ট্রেশন লজিক
         document.getElementById('registerForm').onsubmit = (e) => {
             e.preventDefault();
             const name = document.getElementById('regName').value;
@@ -280,14 +291,14 @@
                 updateProfile(res.user, { displayName: name }).then(() => {
                     window.location.href = "shop.html";
                 });
-            }).catch(() => alert("রেজিস্ট্রেশন ব্যর্থ হয়েছে"));
+            }).catch(e => alert("ব্যর্থ হয়েছে"));
         };
 
         // গুগল লগইন
         window.googleLogin = () => {
-            signInWithPopup(auth, provider)
-                .then(() => window.location.href = "shop.html")
-                .catch(() => alert("গুগল লগইন বাতিল"));
+            signInWithPopup(auth, provider).then(() => {
+                window.location.href = "shop.html";
+            });
         };
     </script>
 </body>
