--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MS STORE - Premium Experience</title>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+    <title>MS STORE - Premium Store</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -19,6 +19,11 @@
         </div>
     </div>
 
+    <div class="brand-section">
+        <h1 class="brand-name">MS STORE</h1>
+        <p class="brand-tagline">আপনার আস্থার সেরা অনলাইন শপ</p>
+    </div>
+
     <div class="container" id="container">
         <div class="form-container sign-up">
             <form id="registerForm">
@@ -26,7 +31,7 @@
                 <input type="text" id="regName" placeholder="Full Name" required>
                 <input type="email" id="regEmail" placeholder="Email" required>
                 <input type="password" id="regPass" placeholder="Password" required>
-                <button type="submit">Sign Up</button>
+                <button type="submit">Sign Up Now</button>
                 <button type="button" class="google-btn" onclick="googleLogin()">
                     <img src="https://img.icons8.com/color/48/000000/google-logo.png"/> Google Sign Up
                 </button>
@@ -61,4 +66,5 @@
 
     <script type="module" src="script.js"></script>
 </body>
-</html>
+                    </html>
+                    
