--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MS STORE - Premium Store</title>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&display=swap" rel="stylesheet">
+    <title>MS STORE - Premium Experience</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -17,11 +17,6 @@
         <div class="admin-dropdown">
             <a href="admin_login.html"><i class="fa fa-user-shield"></i> Admin Login</a>
         </div>
-    </div>
-
-    <div class="brand-section">
-        <h1 class="brand-name">MS STORE</h1>
-        <p class="brand-tagline">আপনার আস্থার সেরা অনলাইন শপ</p>
     </div>
 
     <div class="container" id="container">
@@ -53,10 +48,18 @@
         <div class="toggle-container">
             <div class="toggle">
                 <div class="toggle-panel toggle-left">
+                    <div class="brand-inside">
+                        <h1 class="brand-name">MS STORE</h1>
+                        <p class="brand-tagline">Quality You Can Trust</p>
+                    </div>
                     <h1>Welcome Back!</h1>
                     <button class="hidden" id="login">Back to Login</button>
                 </div>
                 <div class="toggle-panel toggle-right">
+                    <div class="brand-inside">
+                        <h1 class="brand-name">MS STORE</h1>
+                        <p class="brand-tagline">Elevate Your Lifestyle</p>
+                    </div>
                     <h1>New Here?</h1>
                     <button class="hidden" id="register">Go to Sign Up</button>
                 </div>
@@ -66,5 +69,4 @@
 
     <script type="module" src="script.js"></script>
 </body>
-                    </html>
-                    
+</html>
