--- a/shop.html
+++ b/shop.html
@@ -321,5 +321,33 @@
         navigator.clipboard.writeText(id).then(() => alert("ID কপি হয়েছে: " + id));
     };
 </script>
+    <script type="module">
+import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+
+// আপনার কনফিগারেশন
+const firebaseConfig = {
+    apiKey: "AIzaSyCu8lgGs3Q-qLeedhngQAVXtt8BHOAlWDg",
+    authDomain: "ms-sp-97f78.firebaseapp.com",
+    projectId: "ms-sp-97f78",
+    databaseURL: "https://ms-sp-97f78-default-rtdb.firebaseio.com",
+    appId: "1:880638162029:web:b99af5b5518b3e16a13b64"
+};
+
+const app = initializeApp(firebaseConfig);
+const auth = getAuth(app);
+
+// ইউজার লগইন করা আছে কিনা চেক করা
+onAuthStateChanged(auth, (user) => {
+    if (!user) {
+        // যদি ইউজার লগইন না থাকে, তবে তাকে মেইন পেজে পাঠিয়ে দাও
+        alert("দয়া করে আগে লগইন করুন!");
+        window.location.href = "index.html";
+    } else {
+        console.log("Welcome:", user.displayName);
+    }
+});
+    </script>
+    
 </body>
 </html>
